--- a/cricket.html
+++ b/cricket.html
@@ -8,8 +8,7 @@
     }
     div {
       display: inline-block;
-      justify-content: center;
-    }
+      justify-content:baseline; }
     button {
       background-color: blueviolet;
       margin: 50px;
